implement getBeer and getRandomBeer
