# internal/api/handlers/beers/get_beers.go
@@ -4,12 +4,9 @@ import (
 	"fmt"
 	"net/http"
 
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
 	"github.com/labstack/echo/v4"
 	"github.com/majodev/go-beer-punk-proxy/internal/api"
 	"github.com/majodev/go-beer-punk-proxy/internal/models"
-	"github.com/majodev/go-beer-punk-proxy/internal/types"
 	"github.com/majodev/go-beer-punk-proxy/internal/types/beers"
 	"github.com/majodev/go-beer-punk-proxy/internal/util"
 	"github.com/majodev/go-beer-punk-proxy/internal/util/db"
@@ -72,53 +69,10 @@ func getBeersHandler(s *api.Server) echo.HandlerFunc {
 			return err
 		}
 
-		response := make(types.GetBeersResponse, len(beers))
+		response, err := MarschalBeers(beers)
 
-		for i, beer := range beers {
-
-			var volume types.BoilVolume
-			if err := volume.UnmarshalBinary(beer.Volume); err != nil {
-				return err
-			}
-
-			var boilVolume types.BoilVolume
-			if err := boilVolume.UnmarshalBinary(beer.BoilVolume); err != nil {
-				return err
-			}
-
-			var method types.Method
-			if err := method.UnmarshalBinary(beer.Method); err != nil {
-				return err
-			}
-
-			var ingredients types.Ingredients
-			if err := ingredients.UnmarshalBinary(beer.Ingredients); err != nil {
-				return err
-			}
-
-			response[i] = &types.Beer{
-				ID:               swag.Int64(int64(beer.ID)),
-				Name:             &beer.Name,
-				Tagline:          &beer.Tagline,
-				FirstBrewed:      swag.String(beer.FirstBrewed.Format("01/2006")),
-				Description:      &beer.Description,
-				ImageURL:         strfmt.URI(beer.ImageURL.String),
-				Abv:              &beer.Abv,
-				Ibu:              beer.Ibu,
-				TargetFg:         swag.Int64(beer.TargetFG.Int64),
-				TargetOg:         swag.Float64(beer.TargetOg.Float64),
-				Ebc:              swag.Float64(beer.Ebc.Float64),
-				Srm:              swag.Float64(beer.SRM.Float64),
-				Ph:               swag.Float64(beer.PH.Float64),
-				AttenuationLevel: swag.Float64(beer.AttenuationLevel.Float64),
-				Volume:           &volume,
-				BoilVolume:       &boilVolume,
-				Method:           &method,
-				Ingredients:      &ingredients,
-				FoodPairing:      beer.FoodPairing,
-				BrewersTips:      &beer.BrewersTips,
-				ContributedBy:    swag.String(beer.ContributedBy),
-			}
+		if err != nil {
+			return err
 		}
 
 		return util.ValidateAndReturn(c, http.StatusOK, response)
