# internal/api/handlers/handlers.go
@@ -21,7 +21,9 @@ func AttachAllRoutes(s *api.Server) {
 		auth.PostLogoutRoute(s),
 		auth.PostRefreshRoute(s),
 		auth.PostRegisterRoute(s),
+		beers.GetBeerRoute(s),
 		beers.GetBeersRoute(s),
+		beers.GetRandomBeerRoute(s),
 		common.GetHealthyRoute(s),
 		common.GetReadyRoute(s),
 		common.GetSwaggerRoute(s),
